# workflow-engine

./: .env.ports  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  handlers.py  main.py  models.py  run_worker.py  schemas.py  schemas_auth.py  telemetry.py  worker.py
backend/app/api/: auth_routes.py  routes.py
backend/app/engine/: dag.py  presets.py  retry.py  scheduler.py
backend/tests/: test_api.py  test_dag.py  test_ownership.py
docs/: ARCHITECTURE.md  DESIGN.md  OBSERVABILITY.md  SCALING.md
docs/e2e-screenshots/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  api.ts  auth.tsx  styles.css  vite-env.d.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  RunDetail.tsx  Submit.tsx
k8s/helm-values/: prometheus-kind.yaml
k8s/manifests/: workflow.yaml
loadtest/: k6_workflows.js
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboard.yml  workflow.json
scripts/: capture-obs-screenshots.sh  demo.sh  deploy-app.sh  get-token.sh  kind-config.yaml  kind-up.sh  seed-multi-user.sh  verify-e2e.sh
